Fix misaligned check list checkboxes

--- a/src/styles.css
+++ b/src/styles.css
@@ -132,3 +132,7 @@ body.resizing, body.resizing a:hover, body.resizing * {
 .dark .cm-editor .cm-scroller::-webkit-scrollbar-thumb:hover {
     background-color: rgba(255, 255, 255, 0.5);
 }
+
+.bn-block-content[data-content-type="checkListItem"] > div > div {
+    align-items: center;
+}
